# scientia

./: .gitignore  LICENSE  README.md  SCIENTIA_CLI.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scientia/: __init__.py  arxiv_util.py  bridge.py  catalog.py  clawhub_publish.py  cli.py  detector.py  env_builder.py  executable_generator.py  extractor.py  generator.py  installer.py  llm.py  metadata_enrich.py  method_synthesizer.py  models.py  paper_analyzer.py  pipeline.py  prompts.py  reactor.py  recipe.py  registry.py  repo_analyzer.py  repo_discoverer.py  scorer.py  validator.py  verifier.py
scientia/strategies/: __init__.py  arxiv.py  base.py  cli.py  doi.py  github.py  openapi.py  openapi_parser.py  pdf.py  pypi.py  webpage.py
